base/incubator/rickroll-heyya-immobilien-ch/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
  name: rickroll
  namespace: rickroll-heyya-immobilien-ch
spec:
  tls:
  - hosts:
    - www.heyya-immobilien.ch
    secretName: rickroll
  ingressClassName: nginx
  rules:
  - host: www.heyya-immobilien.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rickroll
            port:
              number: 8080
